--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,7 +13,7 @@
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
     <link rel="stylesheet" href="//demo.productionready.io/main.css">
 </head>
-<body onload="conduit.client.main('conduit')">
+<body onload="conduit.app.client.main('conduit')">
 <div id="conduit"></div>
 <script src="/conduit/main.js">
 </script>
